fixed spacing in row on member page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -364,7 +364,7 @@ h1 {
 
 .members_index {
 	.row {
-		margin-top:20px;
+		margin-top:3%;
 	}
 	.members {
 		.info {
@@ -376,7 +376,7 @@ h1 {
 				size:20px;
 			}
 			.major {
-				margin-top:10px;
+				margin-top:2px;
 				size:20px;
 			}
 		}
